--- a/package.json
+++ b/package.json
@@ -1,4 +1,10 @@
 {
+  "author": "DianziYang",
+  "description": "The Diffilib module re-write in TypeScript",
+  "scripts": {
+    "build": "npx tsc --build",
+    "start": "node ./dist/index.js"
+  },
   "dependencies": {
     "ts-node": "^10.0.0",
     "typescript": "^4.3.4"
